Fix rename classes -> module start of Module.clone
