# routes/module.js
@@ -6,7 +6,7 @@ const auth = require('../controllers/auth');
 router.put('/', auth, moduleController.add);
 router.put('/:idModule', auth, moduleController.clone);
 router.get('/', moduleController.getAll);
-//router.get('/:idPath', moduleController.getClasses);
+//router.get('/:idPath', moduleController.getModules);
 router.put('/:idModule', auth, moduleController.edit);
 router.get('/:idModule', moduleController.getOne);
 router.delete('/:idModule', auth, moduleController.delete);
