# swagger.yaml
@@ -8,7 +8,7 @@ schemes:
 tags:
   - name: User
     description: Gestion des utilisateurs
-  - name: Classe
+  - name: Module
     description: Gestion des cours
   - name: Path
     description: Gestion des parcours
@@ -73,10 +73,10 @@ paths:
           description: mot de passe incorrecte
         '404':
           description: pseudo incorrecte
-  /classe:
+  /Module:
     put:
       tags:
-        - Classe
+        - Module
       summary: ajouter un cours
       security:
         - basicAuth: [ ]
@@ -122,7 +122,7 @@ paths:
                 example: path
     get:
       tags:
-        - Classe
+        - Module
       summary: Récupérer tous les cours
 
       responses:
@@ -133,7 +133,7 @@ paths:
             items:
               type: object
               properties:
-                idClasse:
+                idModule:
                   type: string
                 idPath:
                   type: string
@@ -153,15 +153,15 @@ paths:
                       example: L'architecture MEAN
                     idPath:
                       type: string
-  /classe/{idClasse}:
+  /Module/{idModule}:
     put:
       tags:
-        - Classe
+        - Module
       summary: modifier un cours
       security:
         - basicAuth: [ ]
       parameters:
-        - name: idClasse
+        - name: idModule
           type: string
           required: true
           in: path
@@ -207,10 +207,10 @@ paths:
                 example: path
     get:
       tags:
-        - Classe
+        - Module
       summary: Récupérer un cours
       parameters:
-        - name: idClasse
+        - name: idModule
           type: string
           in: path
           required: true
@@ -220,7 +220,7 @@ paths:
           schema:
             type: object
             properties:
-              idClasse:
+              idModule:
                 type: string
               idPath:
                 type: string
@@ -236,11 +236,11 @@ paths:
           description: Cours non existant
     delete:
       tags:
-        - Classe
+        - Module
       security:
         - basicAuth: [ ]
       parameters:
-        - name: idClasse
+        - name: idModule
           type: string
           in: path
           required: true
@@ -392,12 +392,12 @@ paths:
                 type: string
               description:
                 type: string
-              classes:
+              Modules:
                 type: array
                 items:
                   type: object
                   properties:
-                    idClasse:
+                    idModule:
                       type: string
                     title:
                       type: string
@@ -462,7 +462,7 @@ paths:
       security:
         - basicAuth: [ ]
       parameters:
-        - name: idClasse
+        - name: idModule
           type: string
           required: true
           in: query
@@ -556,7 +556,7 @@ paths:
             properties:
               id:
                 type: string
-              idClasse:
+              idModule:
                 type: string
               url:
                 type: string
@@ -595,10 +595,10 @@ paths:
           description: Impossible de supprimer la ressource
         404:
           description: Ressource non existante
-  /classe/findByKeyWord:
+  /Module/findByKeyWord:
     get:
       tags:
-        - Classe
+        - Module
       parameters:
         - name: keyWord
           type: string
